➕ crud user-book and card with expressions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
-import Layout from "@layouts/index.astro";
+import Layout from "@/components/layouts/index.astro";
 ---
 
 <Layout title="Registrarse">
 
     <a href="/register">register</a>
     <a href="/login">login</a>
+    <a href="/dashboard">entrar</a>
 </Layout>
