--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -15,7 +15,7 @@ if (accessToken && refreshToken) {
   <h1>Iniciar sesión</h1>
   <p>¿Nuevo aquí? <a href="/register">Crea una cuenta</a></p>
   
-  <form action="/api/auth/login" method="post">
+  <form action="/api/auth/v0/login" method="post">
     <label for="email">Correo electrónico</label>
     <input type="email" name="email" id="email" />
     <label for="password">Contraseña</label>
@@ -23,7 +23,7 @@ if (accessToken && refreshToken) {
     <button type="submit">Iniciar sesión</button>
   </form>
 
-  <form action="/api/auth/OAuth/provider" method="post">
+  <form action="/api/auth/v0/OAuth/provider" method="post">
     <button value="github" name="provider"  type="submit">Inicia sesión con Github</button>
   </form>
 </Layout>
