➕ Ui Components Material Desing for MVP

--- a/src/components/layouts/index.astro
+++ b/src/components/layouts/index.astro
@@ -1,45 +1,36 @@
 ---
-import '@material/web/button/filled-button.js';
-import '@material/web/button/outlined-button.js';
-import '@material/web/checkbox/checkbox.js';
-
-
-import Navbar from "./Navbar.astro"
-
-const { title } = Astro.props;
-
-
-import type { SPB_UserData } from "@/env";
-
-const { cookies, redirect, url } = Astro;
-
-const user = cookies.get("user");
-
-if (user === undefined && url.pathname == "/dashboard/*"  ) {
-		return redirect("/");
-}
-
-const user_data: SPB_UserData = JSON.parse(user.value as string);
-
-
+import AppBar from "./AppBar.astro";
+import M3Desing from "./M3/head.astro";
 
 
 ---
 
-
-<html lang="en">
+<html lang="en" data-darkreader-scheme="dark">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Flashky</title>
+
+		<M3Desing />
+
+
 	</head>
 
-	<body>
-		{user_data && <Navbar user_data={user_data} />}
+	<body class="dark">
 		<main>
-            <slot />
-        </main>
+			<slot />
+		</main>
+		<md-outlined-button>Back</md-outlined-button>
+
+		<md-filled-button>Complete</md-filled-button>
+		<md-filled-button>Complete</md-filled-button>
+
+		<md-dialog open>
+			<div slot="content">
+			  A dialog that is opened by default.
+			</div>
+		  </md-dialog>
 	</body>
 </html>
