Primera estructura de Diseño

--- a/src/pages/books/[book_id]-[book_name].astro
+++ b/src/pages/books/[book_id]-[book_name].astro
@@ -1,6 +1,6 @@
 ---
 import AddExpresion from "@components/AddExpression.astro";
-import Layout from "@layouts/index.astro";
+import Layout from "@/layouts/index.astro";
 import { supabase } from "@lib/supabase";
 
 const { book_id, book_name } = Astro.params;
