--- a/src/components/AddUserbook.astro
+++ b/src/components/AddUserbook.astro
@@ -8,7 +8,7 @@ if (Astro.request.method === "POST") {
     try {
         const data = await Astro.request.formData();
         const name_userbook = data.get("name_userbook");
-        console.log(name_userbook)
+        console.log(name_userbook);
         if (name_userbook === "") {
             redirect("/dashboard");
         }
@@ -30,7 +30,40 @@ if (Astro.request.method === "POST") {
 }
 ---
 
-<form method="POST">
-    <input type="text" name="name_userbook" value="" />
-    <input type="submit" value="crear nuevo libro" />
+<form method="post" class="relative flex items-center">
+    <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        class="w-6 h-6 absolute left-4 inset-y-0 my-auto"
+    >
+        <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z"
+        ></path>
+    </svg>
+    <input
+        type="text"
+        name="name_userbook"
+        value=""
+        name="username"
+        id="username"
+        placeholder="Nuevo libro"
+        class="focus:outline-none block w-full rounded-full placeholder-gray-500 bg-gray-100 dark:bg-gray-800 dark:border-gray-600 pl-12 pr-4 h-12 text-gray-600 transition duration-300 invalid:ring-2 invalid:ring-red-400 focus:ring-2 focus:ring-primary"
+    />
+    <div class="absolute right-1">
+        <button
+            type="submit"
+            class="relative flex h-10 w-10 sm:w-max ml-auto items-center justify-center sm:px-6 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95"
+        >
+            <span
+                class="hidden relative text-base font-semibold text-white dark:text-gray-900 sm:block"
+            >
+                add
+            </span>
+        </button>
+    </div>
 </form>
