--- a/src/components/Userbook.astro
+++ b/src/components/Userbook.astro
@@ -26,20 +26,39 @@ const { data: userbook, error }: UserBook = await supabase
 console.log(userbook);
 ---
 
-<h2>lista de libros</h2>
+<div class="flex flex-col sm:flex-row items-center justify-between gap- mb-16">
 
-<div>
+    <h3 class="text-2xl font-semibold text-gray-700 dark:text-white">
+        Lista de libros
+    </h3>
+    <AddUserbook user_id={user_data.id} />
+</div>
+
+
+<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5  gap-4">
     {
         userbook?.length == 0 ? (
             <h3>"no hay libros disponibles crea uno nuevo"</h3>
         ) : (
             userbook?.map((v) => (
-                <a href={"/dashboard/books/" + v.id + "-"+ v.name }>
-                    <div>{v.name}</div>
-                </a>
+                <>
+                    <a href={"/dashboard/books/" + v.id + "-" + v.name}>
+                        <div
+                            aria-hidden="true"
+                            class="h-full w-full rounded-3xl border border-gray-100 dark:border-gray-700 bg-white dark:bg-gray-800 shadow-2xl shadow-gray-600/10 dark:shadow-none transition duration-500 group-hover:scale-105 lg:group-hover:scale-110 p-8"
+                        >
+                            <div class="flex flex-col ">
+                                <span class="text-4xl ml-auto">📕</span>
+                                <h5 class="text-xl font-semibold text-gray-700 dark:text-white">
+                                    {v.name}
+                                </h5>
+                            </div>
+                        </div>
+                    </a>
+                </>
             ))
         )
     }
 </div>
 
-<AddUserbook user_id={user_data.id} />
+
