--- a/src/pages/books/index.astro
+++ b/src/pages/books/index.astro
@@ -1,8 +1,8 @@
 ---
 
 import type { SPB_UserData } from "@env";
-import Userbook from "@components/Userbook.astro";
-import Layout from "@layouts/index.astro";
+import Userbook from "@/components/Userbook.astro";
+import Layout from "@/layouts/index.astro";
 
 
 const { cookies, redirect } = Astro;
