--- a/src/layouts/index.astro
+++ b/src/layouts/index.astro
@@ -1,6 +1,14 @@
 ---
 import Navbar from "./Navbar.astro";
 import Sidebar from "./Sidebar.astro";
+import Protected from "./Protected.astro";
+
+export interface Props {
+	title?: string;
+	verify?: boolean;
+}
+
+const { title, verify } = Astro.props;
 ---
 
 <html lang="en" data-darkreader-scheme="dark">
@@ -10,42 +18,43 @@ import Sidebar from "./Sidebar.astro";
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Flashky</title>
-	</head>
 
-	<script>
-		// On page load or when changing themes, best to add inline in `head` to avoid FOUC
-		if (
-			localStorage.theme === "dark" ||
-			(!("theme" in localStorage) &&
-				window.matchMedia("(prefers-color-scheme: dark)").matches)
-		) {
-			document.documentElement.classList.add("dark");
-		} else {
-			document.documentElement.classList.remove("dark");
-		}
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+		/>
+		<script>
+			// On page load or when changing themes, best to add inline in `head` to avoid FOUC
+			if (
+				localStorage.theme === "dark" ||
+				(!("theme" in localStorage) &&
+					window.matchMedia("(prefers-color-scheme: dark)").matches)
+			) {
+				document.documentElement.classList.add("dark");
+			} else {
+				document.documentElement.classList.remove("dark");
+			}
 
-		// Whenever the user explicitly chooses light mode
-		localStorage.theme = "light";
+			// Whenever the user explicitly chooses light mode
+			localStorage.theme = "light";
 
-		// Whenever the user explicitly chooses dark mode
-		localStorage.theme = "dark";
+			// Whenever the user explicitly chooses dark mode
+			localStorage.theme = "dark";
 
-		// Whenever the user explicitly chooses to respect the OS preference
-		localStorage.removeItem("theme");
-	</script>
+			// Whenever the user explicitly chooses to respect the OS preference
+			localStorage.removeItem("theme");
+		</script></head
+	>
 
-	<body class="bg-gray-100 dark:bg-gray-900">
+	<body class="bg-gray-100 dark:bg-gray-900 dark:text-white">
 		<!-- ./Sidebar -->
+		<!-- <Sidebar /> -->
 		<!-- ./Sidebar -->
 		<!-- <div class="mx-auto mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%]"> -->
+		<Navbar />
 
-		<div class="mx-auto w-full">
-			<Navbar />
-			<div class="px-6 pt-6 2xl:container ">
-					<div class="dark:text-white">
-						<slot />
-					</div>
-			</div>
+		<div class="mx-auto w-full 2xl:container">
+			<slot />
 		</div>
 	</body>
 </html>
