--- a/src/pages/app/books/index.astro
+++ b/src/pages/app/books/index.astro
@@ -17,5 +17,7 @@ const user_data: SPB_UserData = JSON.parse(user.value);
 
 ---
 <Layout >
-    <Userbook user_data={user_data} />
+    <div class="container mx-auto">
+        <Userbook user_data={user_data} />
+    </div>
 </Layout>
