--- a/src/components/AddUserbook.astro
+++ b/src/components/AddUserbook.astro
@@ -1,36 +1,10 @@
 ---
-import { supabase } from "@lib/supabase";
+
 const { user_id } = Astro.props;
 
-const { redirect } = Astro;
-
-if (Astro.request.method === "POST") {
-    try {
-        const data = await Astro.request.formData();
-        const name_userbook = data.get("name_userbook");
-        console.log(name_userbook);
-        if (name_userbook === "") {
-            redirect("/dashboard");
-        }
-
-        const { data: res, error } = await supabase
-            .from("user-book")
-            .insert({
-                user_id: user_id,
-                name: name_userbook,
-            })
-            .select();
-
-        // Astro.redirect("/dashboard")
-    } catch (error) {
-        if (error instanceof Error) {
-            console.error(error.message);
-        }
-    }
-}
 ---
 
-<form method="post" class="relative flex items-center">
+<form action="/api/v0/userbook/add" method="post" class="relative flex items-center">
     <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -45,6 +19,7 @@ if (Astro.request.method === "POST") {
             d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z"
         ></path>
     </svg>
+    <input type="hidden" name="user_id" value={user_id} />
     <input
         type="text"
         name="name_userbook"
