--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -3,7 +3,7 @@
 ---
 
 <div
-  class="fixed inset-x-0 top-0 h-16 border-b bg-white dark:bg-gray-800 dark:border-gray-700 lg:py-2.5"
+  class="sticky inset-x-0 top-0 h-16 border-b bg-white dark:bg-gray-800 dark:border-gray-700 lg:py-2.5"
 >
   <div class="flex items-center justify-between space-x-4 px-6 2xl:container">
     <h5
