--- a/src/pages/app/index.astro
+++ b/src/pages/app/index.astro
@@ -1,21 +1,22 @@
 ---
 import Layout from "@layouts/index.astro";
 
+import Userbook from "@/components/Userbook.astro";
 
 import type { SPB_UserData } from "@/env";
 
 const { cookies, redirect } = Astro;
 const user_cookie = cookies.get("user")?.value;
-if (user_cookie === undefined ) {
-	return redirect("/");
+if (user_cookie === undefined) {
+  return redirect("/");
 }
 
-const user_data:SPB_UserData = user_cookie && JSON.parse(user_cookie as string);
+const user_data: SPB_UserData =
+  user_cookie && JSON.parse(user_cookie as string);
 ---
 
-<Layout  >
-  <br />
-  <br />
-  <br />
-  <a href="/dashboard/books">ver colecciones de libros</a>
+<Layout>
+  <div class="container mx-auto mt-14">
+    <Userbook user_data={user_data} />
+  </div>
 </Layout>
