carrusel flashcards working | storage + state manager

--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -6,12 +6,14 @@
   class="sticky inset-x-0 top-0 h-16 border-b bg-white dark:bg-gray-800 dark:border-gray-700 lg:py-2.5"
 >
   <div class="flex items-center justify-between space-x-4 px-6 2xl:container">
-    <h5
-      hidden
-      class="text-2xl font-medium text-gray-600 lg:block dark:text-white"
-    >
-      Dashboard
-    </h5>
+    <a href="/">
+      <h5
+        hidden
+        class="text-2xl font-medium text-gray-600 lg:block dark:text-white"
+      >
+        Dashboard
+      </h5>
+    </a>
     <button
       class="-mr-2 h-16 w-12 border-r lg:hidden dark:border-gray-700 dark:text-gray-300"
     >
@@ -149,9 +151,10 @@
         ></button
       >
       <!-- Theme botton -->
-      
+
       <!-- logout -->
-      <a href="/api/v0/auth/logout"
+      <a
+        href="/api/v0/auth/logout"
         aria-label="chat"
         class="h-10 w-10 flex place-items-center place-content-center rounded-xl border bg-gray-100 active:bg-gray-200 dark:bg-gray-700 dark:border-gray-600 dark:active:bg-gray-800"
         ><span class="material-symbols-outlined"> power_settings_new </span>
