--- a/src/pages/app/index.astro
+++ b/src/pages/app/index.astro
@@ -18,5 +18,10 @@ const user_data: SPB_UserData =
 <Layout>
   <div class="container mx-auto mt-14">
     <Userbook user_data={user_data} />
+
+    <a
+      class="mt-10 block text-center bg-slate-600 px-4 py-3 text-white"
+      href="/app/study">Estudiar</a
+    >
   </div>
 </Layout>
