--- a/src/components/FlashCard.astro
+++ b/src/components/FlashCard.astro
@@ -1,5 +1,12 @@
 ---
-const { book_id, name, card_id, expression_id } = Astro.props;
+interface Props {
+    userBook_id: string;
+    name: string;
+    card_id: string;
+    expression_id: string;
+    set: boolean;
+}
+const {set, userBook_id, name, card_id, expression_id } = Astro.props;
 ---
 
 <script>
@@ -10,21 +17,26 @@ const { book_id, name, card_id, expression_id } = Astro.props;
             const cardId = this.dataset.cardId;
             const expressionId = this.dataset.expressionId;
             const name = this.dataset.name;
+            const setable = this.dataset.setable;
 
-            this.querySelector("button.delete")?.addEventListener("click", (e) => {
-                e.preventDefault();
-                const accept = confirm("¿Deseas borrar esta tarjeta?" + name + " card_id = " + cardId + " expression_id = " + expressionId);
+                // DELETE
+                this.querySelector("button.delete")?.addEventListener("click", (e) => {
+                    e.preventDefault();
+                    const accept = confirm("¿Deseas borrar esta tarjeta?" + name + " card_id = " + cardId + " expression_id = " + expressionId);
+    
+                    if (accept) {
+                        fetch(`/api/v0/flashcard/delete?card_id=${cardId}&expression_id=${expressionId}`, {
+                            method: "DELETE",
+                        }).then((res) => {
+                            if (res.status == 200) {
+                                window.location.href = `/app/books/${bookId}-${name}`;
+                            }
+                        });
+                    }
+                });
+                // DELETE
+                
 
-                if (accept) {
-                    fetch(`/api/v0/flashcard/delete?card_id=${cardId}&expression_id=${expressionId}`, {
-                        method: "DELETE",
-                    }).then((res) => {
-                        if (res.status == 200) {
-                            window.location.href = `/app/books/${bookId}-${name}`;
-                        }
-                    });
-                }
-            });
 
         }
     }
@@ -33,16 +45,18 @@ const { book_id, name, card_id, expression_id } = Astro.props;
 </script>
 
 <expression-card
+    data-setable={set}
     data-card-id={card_id}
     data-expression-id={expression_id}
-    data-book-id={book_id}
+    data-book-id={userBook_id}
     data-name={name}
     class="my-6 py-4 px-6 flex gap-4 rounded-3xl text-gray-300 bg-gray-100 dark:bg-gray-800 dark:border-gray-600 transition duration-300"
 >
     <h3>{name}</h3>
     <span>card = {card_id}</span>
-    <span>expression = {expression_id}</span>
+    <span>last_review = {expression_id}</span>
 
+    {set &&
     <button
         class="ml-auto delete"
         delete-btn
@@ -70,4 +84,6 @@ const { book_id, name, card_id, expression_id } = Astro.props;
             });
         </script>  -->
     </button>
+    }
+
 </expression-card>
