--- a/src/layouts/index.astro
+++ b/src/layouts/index.astro
@@ -9,6 +9,9 @@ export interface Props {
 }
 
 const { title, verify } = Astro.props;
+
+
+
 ---
 
 <html lang="en" data-darkreader-scheme="dark">
@@ -47,6 +50,7 @@ const { title, verify } = Astro.props;
 	>
 
 	<body class="bg-gray-100 dark:bg-gray-900 dark:text-white">
+		<!-- <Protected/> -->
 		<!-- ./Sidebar -->
 		<!-- <Sidebar /> -->
 		<!-- ./Sidebar -->
