--- a/src/pages/app/books/[book_id]-[book_name].astro
+++ b/src/pages/app/books/[book_id]-[book_name].astro
@@ -4,19 +4,18 @@ import { supabase } from "@lib/supabase";
 import SetBook from "@components/SetBook.astro";
 
 import FlashCard from "@components/FlashCard.astro";
-import type { SPB_UserData } from "@env";
+import { $user } from "@lib/db/nanostores/user.store";
 
 const { book_id, book_name } = Astro.params;
 
-const { cookies, redirect, url } = Astro;
-const user_cookie = cookies.get("user")?.value;
+const { redirect, url } = Astro;
+const userdata = $user.get();
 
-if (user_cookie === undefined) {
+
+if (userdata === undefined) {
     return redirect("/");
 }
 
-const user_data: SPB_UserData =
-    user_cookie && JSON.parse(user_cookie as string);
 
 //  get all card_expresion
 const { data: card_expresion, error } = await supabase
@@ -50,7 +49,7 @@ const { data: card_expresion, error } = await supabase
                     ></path>
                 </svg>
                 <input type="hidden" name="user_book_id" value={book_id} />
-                <input type="hidden" name="user_id" value={user_data.id} />
+                <input type="hidden" name="user_id" value={userdata.id} />
                 <input type="hidden" name="user_book_name" value={book_name} />
                 <input
                     required
