--- a/src/pages/app/books/index.astro
+++ b/src/pages/app/books/index.astro
@@ -4,20 +4,14 @@ import type { SPB_UserData } from "@env";
 import Userbook from "@/components/Userbook.astro";
 import Layout from "@/layouts/index.astro";
 
-
-const { cookies, redirect } = Astro;
-
-const user = cookies.get("user");
-
-if (user === undefined) {
-    return redirect("/");
+import {$user} from '@/lib/db/nanostores/user.store'
+if ($user.get() === undefined && Astro.url.pathname !== "/") {
+    return Astro.redirect("/");
 }
-
-const user_data: SPB_UserData = JSON.parse(user.value);
 
 ---
 <Layout >
     <div class="container mx-auto">
-        <Userbook user_data={user_data} />
+        <Userbook  />
     </div>
 </Layout>
