--- a/src/pages/app/index.astro
+++ b/src/pages/app/index.astro
@@ -3,21 +3,17 @@ import Layout from "@layouts/index.astro";
 
 import Userbook from "@/components/Userbook.astro";
 
-import type { SPB_UserData } from "@/env";
+import {$user} from '@/lib/db/nanostores/user.store'
 
-const { cookies, redirect } = Astro;
-const user_cookie = cookies.get("user")?.value;
-if (user_cookie === undefined) {
-  return redirect("/");
+if ($user.get() === undefined && Astro.url.pathname !== "/") {
+    return Astro.redirect("/");
 }
 
-const user_data: SPB_UserData =
-  user_cookie && JSON.parse(user_cookie as string);
 ---
 
 <Layout>
   <div class="container mx-auto mt-14">
-    <Userbook user_data={user_data} />
+    <Userbook  />
 
     <a
       class="mt-10 block text-center bg-slate-600 px-4 py-3 text-white"
