--- a/src/pages/app/study/index.astro
+++ b/src/pages/app/study/index.astro
@@ -1,14 +1,13 @@
 ---
 import Layout from "@layouts/index.astro";
-import Study from "@components/ui/preat/Study/index";
+import Study from "@components/ui/StudyInterface.preact";
 
 
-const { cookies, redirect } = Astro;
-const user_cookie = cookies.get("user")?.value;
-if (user_cookie === undefined) {
-    return redirect("/");
+import {$user} from '@/lib/db/nanostores/user.store'
+
+if ($user.get() === undefined && Astro.url.pathname !== "/") {
+    return Astro.redirect("/");
 }
-
 
 ---
 
