--- a/src/pages/app/books/[book_id]-[book_name].astro
+++ b/src/pages/app/books/[book_id]-[book_name].astro
@@ -3,7 +3,7 @@ import Layout from "@/layouts/index.astro";
 import { supabase } from "@lib/supabase";
 import SetBook from "@components/SetBook.astro";
 
-import FlashCard from "@components/FlashCard.astro";
+import FlashCard from "@components/FlashCardListItem.astro";
 import { $user } from "@lib/db/nanostores/user.store";
 
 const { book_id, book_name } = Astro.params;
@@ -11,11 +11,9 @@ const { book_id, book_name } = Astro.params;
 const { redirect, url } = Astro;
 const userdata = $user.get();
 
-
 if (userdata === undefined) {
     return redirect("/");
 }
-
 
 //  get all card_expresion
 const { data: card_expresion, error } = await supabase
@@ -112,21 +110,27 @@ const { data: card_expresion, error } = await supabase
             </div>
         </div>
 
-        <div class="flex flex-col">
+        <ul class="flex flex-col">
             {
                 card_expresion &&
                     card_expresion.map((v) => (
-                        <div>
-                            <FlashCard
-                            set={true}
-                                name={v.expression_name}
-                                userBook_id={book_id as string}
-                                card_id={v.id}
-                                expression_id={v.expression_id}
-                            />
-                        </div>
+                        <>
+                            <div>
+                                <li class="relative">
+                                    <div class="flex flex-row items-center gap-3 py-4 pl-4 pr-6 rounded-full  hover-icon hover:bg-secondary-100 dark:hover:bg-secondary-700 hover:bg-opacity-30 dark:hover:bg-opacity-30 [&>span]:flex">
+                                        <FlashCard
+                                            set={true}
+                                            name={v.expression_name}
+                                            userBook_id={book_id as string}
+                                            card_id={v.id}
+                                            expression_id={v.expression_id}
+                                        />
+                                    </div>
+                                </li>
+                            </div>
+                        </>
                     ))
             }
-        </div>
+        </ul>
     </div>
 </Layout>
