--- a/src/pages/app/study/results.astro
+++ b/src/pages/app/study/results.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@layouts/index.astro";
 
-
+import ListReview from "@components/StudyInterface.preact/ListReview";
 import {$user} from '@/lib/db/nanostores/user.store'
 
 if ($user.get() === undefined && Astro.url.pathname !== "/") {
@@ -12,8 +12,11 @@ if ($user.get() === undefined && Astro.url.pathname !== "/") {
 
 <Layout>
     <div class="container mx-auto mt-14">
+        <div class={"flex justify-between"}>
+            <h1 class={"text-3xl font-bold mb-10"}>carrusel expressions</h1>
 
-        <h1>resultados</h1>
-        
+            <a href={"/app/study"} class={"rounded-full bg-sky-500 dark:bg-sky-400 h-11 flex items-center justify-center px-6 py-3 transition hover:bg-sky-600 focus:bg-sky-600 active:bg-sky-800"}>Nueva session</a>
+        </div>
+        <ListReview client:only="preact"/>
     </div>
 </Layout>
