All workflow finish with update on review list

--- a/src/components/Userbook.astro
+++ b/src/components/Userbook.astro
@@ -1,6 +1,6 @@
 ---
 import { supabase } from "@lib/supabase";
-import {$user} from '@/lib/db/nanostores/user.store'
+import {$user} from '@lib/db/user.store'
 import type { SPB_UserBook } from "@/env";
 import AddUserbook from "./AddUserbook.astro";
 
