--- a/src/pages/app/books/[book_id]-[book_name].astro
+++ b/src/pages/app/books/[book_id]-[book_name].astro
@@ -4,7 +4,7 @@ import { supabase } from "@lib/supabase";
 import SetBook from "@components/SetBook.astro";
 
 import FlashCard from "@components/FlashCardListItem.astro";
-import { $user } from "@lib/db/nanostores/user.store";
+import { $user } from "@lib/db/user.store";
 
 const { book_id, book_name } = Astro.params;
 
