--- a/src/pages/app/books/index.astro
+++ b/src/pages/app/books/index.astro
@@ -4,7 +4,7 @@ import type { SPB_UserData } from "@env";
 import Userbook from "@/components/Userbook.astro";
 import Layout from "@/layouts/index.astro";
 
-import {$user} from '@/lib/db/nanostores/user.store'
+import {$user} from '@lib/db/user.store'
 if ($user.get() === undefined && Astro.url.pathname !== "/") {
     return Astro.redirect("/");
 }
