--- a/src/pages/app/index.astro
+++ b/src/pages/app/index.astro
@@ -3,7 +3,7 @@ import Layout from "@layouts/index.astro";
 
 import Userbook from "@/components/Userbook.astro";
 
-import {$user} from '@/lib/db/nanostores/user.store'
+import {$user} from '@lib/db/user.store'
 
 if ($user.get() === undefined && Astro.url.pathname !== "/") {
     return Astro.redirect("/");
